<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <RelativeLayout
        android:id="@+id/rlCaptionBar"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:padding="8dp">

        <com.makeramen.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ivAuthorPic"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/text_author_pic"
            android:scaleType="fitCenter"
            app:riv_corner_radius="30dip"
            app:riv_border_width="2dip"
            app:riv_border_color="#333333"
            app:riv_mutate_background="true"
            app:riv_tile_mode="repeat"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_toEndOf="@id/ivAuthorPic"
            android:text="@string/text_content_missing"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/app_text_highlight"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <TextView
            android:id="@+id/tvCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivAuthorPic"
            android:layout_alignParentBottom="true"
            android:text="@string/text_content_missing"
            android:minHeight="30dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:maxHeight="30dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/media_missing"
        android:minHeight="50dp"
        android:scaleType="fitXY"
        android:layout_below="@+id/rlCaptionBar" />

    <LinearLayout
        android:id="@+id/llLikesBar"
        android:layout_below="@+id/ivPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_symbol"
            android:minWidth="35dp"
            android:textSize="28sp"
            android:textColor="@color/app_text_highlight"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/tvLikesText"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/text_content_missing"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="1dp"
            android:textColor="@color/app_text_highlight" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlCommentsBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLikesBar"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <TextView
            android:id="@+id/tvViewAllComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/view_all_comments"
            android:textColor="@android:color/darker_gray"
            android:minHeight="30dp"/>

        <TextView
            android:id="@+id/tvCommentedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvViewAllComments"
            android:gravity="center_vertical"
            android:text="@string/hello_world"
            android:textColor="@color/app_text_highlight"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/tvComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvCommentedBy"
            android:layout_below="@+id/tvViewAllComments"
            android:text="@string/text_content_missing" />

    </RelativeLayout>

    <!--<TextView
        android:id="@+id/tvComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llLikesBar"
        android:minHeight="32dp"
        android:gravity="center_vertical"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/text_content_missing"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />-->

</RelativeLayout>